@@ -54,13 +54,25 @@ class WXDLLEXPORT wxDirTraverser
 public:
     // called for each file found by wxDir::Traverse()
     //
-    // return wxDIR_STOP or wxDIR_CONTINUE from here
+    // return wxDIR_STOP or wxDIR_CONTINUE from here (wxDIR_IGNORE doesn't
+    // make sense)
     virtual wxDirTraverseResult OnFile(const wxString& filename) = 0;
 
     // called for each directory found by wxDir::Traverse()
     //
     // return one of the enum elements defined above
     virtual wxDirTraverseResult OnDir(const wxString& dirname) = 0;
+
+    // called for each directory which we couldn't open during our traversal
+    // of the directory tyree
+    //
+    // this method can also return either wxDIR_STOP, wxDIR_IGNORE or
+    // wxDIR_CONTINUE but the latter is treated specially: it means to retry
+    // opening the directory and so may lead to infinite loop if it is
+    // returned unconditionally, be careful with this!
+    //
+    // the base class version always returns wxDIR_IGNORE
+    virtual wxDirTraverseResult OnOpenError(const wxString& dirname);
 };
 
 // ----------------------------------------------------------------------------
